Updates around user api as a result from testing, also  updated documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 mongo.uri=mongodb://localhost:27017/visible_thread
+
+server.error.include-message=always
+
+logging.level.root=info
+logging.level.com.visible.thread=debug
+logging.level.reactor.netty.http.client.HttpClient=DEBUG
